fixed text align with #board

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,5 @@
-.board {
+#board {
     padding-top: 3em;
-}
-
-h1 {
     text-align: center;
 }
 
